fix header z-index to be over all conent

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -6,6 +6,7 @@
   width: 100%;
   padding: 10px 20px;
   background-color: rgb(255, 255, 255, 0.3);
+  z-index: 2;
 }
 
 .partners {
